--- a/filesys/Makefile
+++ b/filesys/Makefile
@@ -59,8 +59,8 @@ main.o: ../threads/main.cc /usr/include/stdc-predef.h \
  ../filesys/openfile.h ../filesys/filesys-alt.h ../threads/synchcons.h \
  ../machine/console.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/synchcons.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 list.o: ../threads/list.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/list.h ../threads/utility.h \
@@ -124,8 +124,8 @@ scheduler.o: ../threads/scheduler.cc /usr/include/stdc-predef.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/system.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../userprog/bitmap.h \
- ../filesys/openfile.h ../threads/synchcons.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 synch.o: ../threads/synch.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/synch.h ../threads/thread.h \
@@ -161,7 +161,7 @@ synch.o: ../threads/synch.cc /usr/include/stdc-predef.h \
  ../threads/synchcons.h ../machine/console.h ../threads/list.h \
  ../threads/system.h ../threads/scheduler.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 synchlist.o: ../threads/synchlist.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/synchlist.h ../threads/list.h \
@@ -230,7 +230,7 @@ system.o: ../threads/system.cc /usr/include/stdc-predef.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 thread.o: ../threads/thread.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/thread.h ../threads/utility.h \
@@ -266,8 +266,8 @@ thread.o: ../threads/thread.cc /usr/include/stdc-predef.h \
  ../threads/synchcons.h ../machine/console.h ../threads/switch.h \
  ../threads/synch.h ../threads/list.h ../threads/system.h \
  ../threads/scheduler.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../userprog/bitmap.h \
- ../filesys/openfile.h ../threads/synchcons.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 utility.o: ../threads/utility.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/utility.h ../threads/bool.h \
@@ -331,7 +331,7 @@ threadtest.o: ../threads/threadtest.cc /usr/include/stdc-predef.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 interrupt.o: ../machine/interrupt.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../machine/interrupt.h ../threads/list.h \
@@ -367,7 +367,7 @@ interrupt.o: ../machine/interrupt.cc /usr/include/stdc-predef.h \
  ../filesys/openfile.h ../filesys/filesys-alt.h ../threads/synchcons.h \
  ../machine/console.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 sysdep.o: ../machine/sysdep.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h /usr/include/stdio.h \
@@ -485,8 +485,8 @@ sysdep.o: ../machine/sysdep.cc /usr/include/stdc-predef.h \
  ../filesys/filesys.h ../filesys/openfile.h ../filesys/filesys-alt.h \
  ../threads/synchcons.h ../machine/console.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../machine/stats.h \
- ../machine/timer.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/synchcons.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 stats.o: ../machine/stats.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/utility.h ../threads/copyright.h \
@@ -550,8 +550,8 @@ timer.o: ../machine/timer.cc /usr/include/stdc-predef.h \
  ../filesys/openfile.h ../filesys/filesys-alt.h ../threads/synchcons.h \
  ../machine/console.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/synchcons.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 addrspace.o: ../userprog/addrspace.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/system.h ../threads/copyright.h \
@@ -587,7 +587,7 @@ addrspace.o: ../userprog/addrspace.cc /usr/include/stdc-predef.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
  ../userprog/addrspace.h ../bin/noff.h
 bitmap.o: ../userprog/bitmap.cc /usr/include/stdc-predef.h \
@@ -653,7 +653,7 @@ exception.o: ../userprog/exception.cc /usr/include/stdc-predef.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 progtest.o: ../userprog/progtest.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../threads/system.h ../threads/copyright.h \
@@ -689,7 +689,7 @@ progtest.o: ../userprog/progtest.cc /usr/include/stdc-predef.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
  ../userprog/addrspace.h
 console.o: ../machine/console.cc /usr/include/stdc-predef.h \
@@ -726,8 +726,8 @@ console.o: ../machine/console.cc /usr/include/stdc-predef.h \
  ../filesys/openfile.h ../filesys/filesys-alt.h ../threads/synchcons.h \
  ../machine/console.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/synchcons.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 machine.o: ../machine/machine.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../machine/machine.h ../threads/utility.h \
@@ -763,8 +763,8 @@ machine.o: ../machine/machine.cc /usr/include/stdc-predef.h \
  ../filesys/openfile.h ../filesys/filesys-alt.h ../threads/synchcons.h \
  ../machine/console.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/synchcons.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 mipssim.o: ../machine/mipssim.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../machine/machine.h ../threads/utility.h \
@@ -800,8 +800,8 @@ mipssim.o: ../machine/mipssim.cc /usr/include/stdc-predef.h \
  ../filesys/filesys.h ../filesys/openfile.h ../filesys/filesys-alt.h \
  ../threads/synchcons.h ../machine/console.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../userprog/bitmap.h \
- ../filesys/openfile.h ../threads/synchcons.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 translate.o: ../machine/translate.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../machine/machine.h ../threads/utility.h \
@@ -837,8 +837,8 @@ translate.o: ../machine/translate.cc /usr/include/stdc-predef.h \
  ../threads/system.h ../threads/utility.h ../threads/thread.h \
  ../machine/machine.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/synchcons.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 synchcons.o: ../threads/synchcons.cc /usr/include/stdc-predef.h \
  ../threads/synchcons.h ../machine/console.h ../threads/copyright.h \
@@ -937,7 +937,7 @@ filehdr.o: ../filesys/filehdr.cc /usr/include/stdc-predef.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
  ../filesys/filehdr.h
 filesys.o: ../filesys/filesys.cc /usr/include/stdc-predef.h \
@@ -1005,8 +1005,8 @@ fstest.o: ../filesys/fstest.cc /usr/include/stdc-predef.h \
  ../machine/machine.h ../machine/translate.h ../machine/disk.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../userprog/bitmap.h \
- ../filesys/openfile.h ../threads/synchcons.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h ../threads/thread.h
 openfile.o: ../filesys/openfile.cc /usr/include/stdc-predef.h \
  ../threads/copyright.h ../filesys/filehdr.h ../machine/disk.h \
@@ -1112,7 +1112,7 @@ disk.o: ../machine/disk.cc /usr/include/stdc-predef.h \
  ../filesys/filesys-alt.h ../threads/synchcons.h ../machine/console.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../userprog/bitmap.h ../filesys/openfile.h ../threads/synchcons.h \
+ ../threads/synchcons.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
